Update HTML for new feat.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Flowchart Project</title>
 </head>
 <body>
-    <div class="flex-column">
-        <div id="graph-container"></div>
-        <div class="flex-row" id="toolbar"></div>
+    <div id="app-container" class="flex-row">
+        <div id="toolbox"></div>
+        <div class="flex-column">
+            <div id="graph-container"></div>
+        </div>
+        <div id="properties-mananger"></div>
     </div>
     <script src="./src/index.ts" type="module"></script>
 </body>
