--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
             <div id="properties-mananger" class="p-2 border">
                 <p>Properties</p>
+                <form></form>
             </div>
         </div>
     </div>
