--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="flex flex-col h-full flex-1 border overflow-hidden">
-                <div id="graph-container" class="h-full w-full"></div>
+                <div id="graph-container" class="h-full w-full touch-pan-x touch-pan-y"></div>
             </div>
             <div id="properties-mananger" class="p-2 border">
                 <p>Properties</p>
