--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div id="properties-mananger" class="p-2 border">
                 <p>Properties</p>
-                <form></form>
+                <form autocomplete="off" autocapitalize="off"></form>
             </div>
         </div>
     </div>
