--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Flowchart Project</title>
 </head>
 <body>
-    <div class="p-2 w-full h-full">
+    <div class="p-2 w-full h-full flex flex-col gap-0">
+        <div class="flex flex-row gap-2 w-full p-2 pt-0" id="topbar">
+
+        </div>
         <div class="flex flex-row gap-2 w-full h-full border-stone-500">
             <div class="p-2 border basis-36 overflow-x-scroll no-scrollbar flex flex-col content-center">
                 <p class="font-bold text-center">Toolbox</p>
