--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="flex flex-row gap-2 w-full h-full border-stone-500">
             <div class="p-2 border basis-36 overflow-x-scroll no-scrollbar flex flex-col content-center">
-                <p class="font-bold text-center">Toolbox</p>
+                <p class="font-bold text-center">Toolboxx</p>
                 <div id="toolbox" class="flex flex-row justify-center flex-wrap gap-2 mt-2">
                 </div>
             </div>
