--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,20 @@
         </div>
         <div class="loader absolute left-[50%] top-[50%] translate-x-[-50%] translate-y-[-50%]"></div>
     </div>
+    <div class="hidden px-3 absolute left-[50%] top-[50%] translate-x-[-50%] translate-y-[-50%] w-full h-full max-w-[600px] max-h-[500px] z-20">
+        <div id="start-modal" class="flex flex-col gap-2 items-center">
+            <input type="file" id="assignment-upload"  >
+            <button>
+                <label for="assignment-upload">
+                    Do Assignment
+                </label>
+            </button>
+            <p>or</p>
+            <button id="assignment-creation">Make Assignment</button>
+            <p>or</p>
+            <button id="document-creation">Make Document</button>
+        </div>
+    </div>
     <script src="./src/index.ts" type="module"></script>
 </body>
 </html>
